--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.10.6",
+    "cloudinary": "^1.41.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "mongoose": "^8.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "@types/formidable": "^3.4.5"
   }
 }
